[DAO] - Init the skeleton
[DAO] - Parse event

[DAO] - Parse event - DaoProposalCreated

[DAO] - Parse event - DaoProposalCastVoted

[DAO] - API, create draft proposal

[DAO] - APIs, dao proposal

[DAO] - APIs update code

[DAO] - add listened contracts

[DAO] - review code
